- Optimized code with thread safe modification of scan issues and problem descriptors